--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
     <meta property="og:type" content="website">
     <meta property="og:locale" content="en-US">
     <meta property="og:description" content="Cryptest, to easily learn trading.">
-    <meta property="og:image" content="https://cryptest-project.github.io/front/logo.png">
+    <meta property="og:image" content="https://cryptest-project.github.io/front/assets/images/logo.png">
     <meta property="og:image:type" content="image/png">
-    <meta property="og:image:width" content="300">
-    <meta property="og:image:height" content="300">
+    <meta property="og:image:width" content="250">
+    <meta property="og:image:height" content="58">
     <meta property="og:image:alt" content="Cryptest logo">
 
     <meta name="twitter:title" content="Cryptest">
     <meta name="twitter:card" content="summary_small_image">
     <meta name="twitter:description" content="Cryptest, to easily learn trading.">
-    <meta name="twitter:image" content="https://cryptest-project.github.io/front/logo.png">
+    <meta name="twitter:image" content="https://cryptest-project.github.io/front/assets/images/logo.png">
     <meta property="twitter:domain" content="cryptest-project.github.io">
     <meta property="twitter:url" content="https://cryptest-project.github.io/front/index.html">
 
