--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <meta name="author" content="Ezequiel Dev & Mapoto40">
 
     <meta property="og:title" content="Cryptest">
-    <meta property="og:url" content="https://cryptest-project.github.io/front/index.html">
+    <meta property="og:url" content="https://cryptest-project.github.io/Front">
     <meta property="og:site_name" content="Cryptest">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="en-US">
     <meta property="og:description" content="Cryptest, to easily learn trading.">
-    <meta property="og:image" content="https://cryptest-project.github.io/front/assets/images/logo.png">
+    <meta property="og:image" content="https://cryptest-project.github.io/Front/assets/images/logo.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="250">
     <meta property="og:image:height" content="58">
@@ -28,9 +28,9 @@
     <meta name="twitter:title" content="Cryptest">
     <meta name="twitter:card" content="summary_small_image">
     <meta name="twitter:description" content="Cryptest, to easily learn trading.">
-    <meta name="twitter:image" content="https://cryptest-project.github.io/front/assets/images/logo.png">
+    <meta name="twitter:image" content="https://cryptest-project.github.io/Front/assets/images/logo.png">
     <meta property="twitter:domain" content="cryptest-project.github.io">
-    <meta property="twitter:url" content="https://cryptest-project.github.io/front/index.html">
+    <meta property="twitter:url" content="https://cryptest-project.github.io/Front">
 
     <link type="text/css" rel="stylesheet" href="./assets/css/style.css">
 
