--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Cryptest</title>
 
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=7">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -43,6 +44,8 @@
 <body>
     
     <h1>Hello world!</h1>
+    
+    <a href="./pages/home.html">Go to home page</a>
 
 </body>
 </html>
