--- a/pages/home.html
+++ b/pages/home.html
@@ -58,11 +58,11 @@
             </div>
                 
             <div class="bottom_nav">
-                <a class="link_page log" href="#">
+                <a class="link_page log" href="../pages/auth.html#register">
                     <img src="../assets/images/person-add-outline .png" alt="">
                     <p class="nav_none" translate="no">Register</p>
                 </a>
-                <a class="link_page log" href="#">
+                <a class="link_page log" href="../pages/auth.html#login">
                     <img src="../assets/images/log-in-outline .png" alt="">
                     <p class="nav_none" translate="no">Login</p>
                 </a>
